[package]
name = "bellman_phase2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellman = "0.14.0"
bls12_381 = "0.8.0"
ff = { version = "0.13", features = ["derive", "derive_bits"] }
pairing = "0.23.0"
blake2-rfc = "0.2"
byteorder = "1"
rand_chacha = "0.3.1"
rand = "0.8.5"
num_cpus = "1"
group = "0.13.0"
crossbeam = "0.3"